# agents-demo

./: README.md  index.html  output.json  pyproject.toml  requirements.txt
agents/mcp_server/: mcp_server.py
agents/openai_agents/: fetch_address.py
openai_agents/: fetch_address.py  server.py
src/agents/: agent.py  config.yaml
src/google_agents/: fetch_address.py
src/mcp_server/: mcp_server.py
src/openai_agents/: fetch_address.py
